# proj1

./: initial.html  initial.ipynb  initial.py  pyproject.toml  school-data.html  school-data.qmd  stu-grades.html  stu-grades.ipynb
