[project]
name = "proj1"
version = "0.1.0"
description = "EDA Personal Project 1 - in jupyter notebook"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anywidget>=0.9.18",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.5",
    "nbconvert>=7.16.6",
    "notebook>=7.4.4",
    "numpy>=2.3.2",
    "plotly>=6.2.0",
    "polars>=1.31.0",
]
